# aileron

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  runtime-images.yml
crates/aileron/: Cargo.toml
crates/aileron-daemon/: Cargo.toml
crates/aileron-daemon/benches/: daemon_bookkeeping.rs
crates/aileron-daemon/src/: assignments.rs  config.rs  container.rs  hardware.rs  lib.rs  llmfit_metadata.rs  main.rs  manifests.rs  observability.rs  permissions.rs  profiles.rs  request_execution.rs  service.rs  state.rs
crates/aileron-daemon/src/handlers/: inference.rs  mod.rs  models.rs  permissions.rs  sessions.rs
crates/aileron-demo/: Cargo.toml
crates/aileron-demo/flatpak/: org.aileron.Demo.yml
crates/aileron-demo/src/: app.rs  main.rs
crates/aileron-demo/src/app/: tool_demo.rs
crates/aileron-demo/src/app/frontends/: chat.rs  embedding.rs  mod.rs  overview.rs  prediction.rs  speech.rs  text.rs  tool.rs  vision.rs
crates/aileron-demo/src/app/tts/: audio.rs  mod.rs  phrase_buffer.rs
crates/aileron-ipc/: Cargo.toml
crates/aileron-ipc/src/: client.rs  error.rs  lib.rs  server.rs
crates/aileron-portal/: Cargo.toml
crates/aileron-portal/src/: main.rs  portal.rs
crates/aileron-runtime/: Cargo.toml
crates/aileron-runtime/src/: lib.rs  llama_runtime.rs
crates/aileron-varlink/: Cargo.toml  build.rs
crates/aileron-varlink/src/: lib.rs
crates/aileron-varlink/varlink/: aileron.Inference.varlink  aileron.Models.varlink  aileron.Permissions.varlink  aileron.Sessions.varlink
crates/aileron/src/: app.rs  main.rs
crates/aileron/src/pages/: activity_page.rs  downloads_page.rs  mod.rs  models_page.rs  overview_page.rs  permissions_page.rs  runtimes_page.rs
docs/: app-developer-guide.md  distro-packaging.md  runtime-protocol.md  tool-calling.md
docs/superpowers/specs/: 2026-07-18-vision-foundation-runtime-design.md  2026-07-23-llmfit-vits-tts-installation-design.md  2026-07-23-streaming-tts-integration-design.md
images/asr/: Dockerfile  Dockerfile.cuda  Dockerfile.vulkan  README.md  download_model.py  entrypoint.py
images/llm/: Dockerfile  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  README.md  download_model.py  entrypoint.py
images/stub/: Dockerfile  README.md
images/vision/: Dockerfile  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  README.md  download_model.py  entrypoint.py
manifests/examples/: README.md
manifests/examples/models/: gemma-4-e4b-it-q4-k-xl.json  llama3.2-3b-instruct-q4-k-m.json  tinyllama-1.1b-f16-llamafile.json  whisper-large-v3-turbo-q5-0.json
manifests/models/: codegemma-2b-q4-k-m.json  deepseek-r1-distill-qwen-7b-q4-k-m.json  depth-anything-3-base.json  depth-anything-3-small.json  gemma-4-e4b-it-q4-k-xl.json  llama3.2-3b-instruct-q4-k-m.json  mistral-7b-instruct-v0.3-q4-k-m.json  mistral-7b-v0.2-iq3-s.json  phi-2-f16.json  phi-2-q4-0.json  phi-2-q8-0.json  qwen2.5-14b-instruct-q4-k-m.json  qwen2.5-coder-14b-instruct-q4-k-m.json  qwen2.5-coder-7b-instruct-q4-k-m.json  sam2-hiera-tiny.json  sam2.1-hiera-tiny.json  stories15m-be-q4-0.json  stories15m-be-q8-0.json  stories15m-f16.json  stories15m-q4-0.json  stories15m-q8-0.json  stories260k-f16.json  stories260k-infill.json  tinyllama-1.1b-f16.json  whisper-base-q8-0.json  whisper-large-v3-q5-0.json  whisper-large-v3-turbo-f16.json  whisper-large-v3-turbo-q5-0.json  whisper-large-v3-turbo-q8-0.json  whisper-medium-q5-0.json  whisper-small-q5-1.json  yolo26n.json  yolov9-c-onnx-q8.json
manifests/runtimes/: asr-whisper-cpp.json  llm-llama-cpp.json  llm-llamafile.json  llm-vision-whisper.json  tts-vits.json  vision-foundation.json  vision-llama-cpp-gemma4.json
portal/: aileron-portals.conf  aileron.portal  org.freedesktop.impl.portal.desktop.aileron.service
runtimes/: llama-cpp.Dockerfile  llamafile.Dockerfile
runtimes/_llama_cpp_common/: aileron_runtime_common.py
runtimes/asr-whisper-cpp/: Dockerfile  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  README.md  entrypoint.py  runtime.json
runtimes/llm-llama-cpp/: Dockerfile  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  README.md  entrypoint.py  runtime.json
runtimes/llm-llamafile/: README.md  entrypoint.py  runtime.json  test_entrypoint.py
runtimes/llm-vision-whisper/: Dockerfile  README.md  entrypoint.sh  runtime.json
runtimes/stub/: Dockerfile  README.md  entrypoint.py  runtime.json
runtimes/tts-vits/: Dockerfile  README.md  entrypoint.sh  runtime.json
runtimes/tts-vits/tests/: test_runtime.py
runtimes/tts-vits/tts_vits/: __init__.py  runtime.py
runtimes/vision-foundation/: Dockerfile  README.md  entrypoint.sh  runtime.json
runtimes/vision-foundation/tests/: test_runtime.py
runtimes/vision-foundation/vision_foundation/: __init__.py  runtime.py
runtimes/vision-llama-cpp-gemma4/: Dockerfile  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  README.md  entrypoint.py  runtime.json
systemd/: aileron-daemon.service  aileron-portal.service
