[workspace]
resolver = "3"
members = [
    "crates/aileron-varlink",
    "crates/aileron-ipc",
    "crates/aileron-daemon",
    "crates/aileron-portal",
    "crates/aileron",
    "crates/aileron-demo",
    "crates/aileron-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Aileron contributors"]

[workspace.dependencies]
aileron-varlink = { path = "crates/aileron-varlink" }
aileron-ipc     = { path = "crates/aileron-ipc" }

tokio    = { version = "1", features = ["full"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
llmfit-core = "1.0.1"
uuid     = { version = "1", features = ["v4"] }
anyhow   = "1"
thiserror = "2"
clap     = { version = "4", features = ["derive", "env"] }
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

varlink           = "13"
varlink_generator = "13"

zbus   = { version = "5", features = ["tokio"] }
gtk4       = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_9"] }
glib       = "0.22"
gio        = "0.22"
relm4      = { version = "0.11", features = ["libadwaita"] }
reqwest = { version = "0.13", features = ["blocking"] }
chrono = "0.4"
sha2 = "0.11"
tar = "0.4"
ocirender = "0.2.1"
hegeltest = "0.23.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
