[package]
name = "aileron-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aileron-daemon"
path = "src/main.rs"

[dependencies]
aileron-varlink = { workspace = true }
aileron-ipc     = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
llmfit-core     = { workspace = true }
uuid            = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
clap            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
varlink         = { workspace = true }
chrono          = { workspace = true }
reqwest         = { workspace = true }
sha2            = { workspace = true }
tar             = { workspace = true }
ocirender       = { workspace = true }

[dev-dependencies]
criterion = "0.7"
tempfile = "3"

[[bench]]
name = "daemon_bookkeeping"
harness = false
