[package]
name = "aileron-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aileron-varlink = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
varlink         = { workspace = true }
