[package]
name = "aileron-varlink"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
varlink      = { workspace = true }
serde        = { workspace = true }
serde_derive = "1"
serde_json   = { workspace = true }
anyhow       = { workspace = true }

[build-dependencies]
varlink_generator = { workspace = true }

[dev-dependencies]
hegeltest = { workspace = true }
